--- a/static/scss/_select2.scss
+++ b/static/scss/_select2.scss
@@ -333,7 +333,7 @@
 
         .select2-selection--multiple {
             min-height: $input-height;
-            padding: 0.2rem 0.2rem;
+            border-radius: var(--bs-border-radius);
 
             .picker-color {
                 top: 4px;
